--- a/web/themes/custom/skate/css/component/home.css
+++ b/web/themes/custom/skate/css/component/home.css
@@ -57,6 +57,59 @@
 i have a hoarding problem. anyhow. below is literally the exact same thing as the about page. 
 I don't know why I bothered having two seperate css pages for both when i could've just had one. alwell.*/
 
+@media(max-width:56.200em) {
+
+	.home .views-row {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+
+
+}
+
+
+/*below ensures that the text fields on the home page attempt to stay centered.
+*/
+.home .views-row .views-field-field-dynamic .field-content{
+	padding: 2.5%;
+
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	
+}
+
+.home .views-row .views-field-field-image .field-content{
+	/*display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	margin: auto;*/
+}
+
+.home .views-row .views-field-field-dynamic .field-content h2 {
+	align-self: center;
+}
+
+/*.home .views-row .views-field-field-image .field-content img {
+	align-self: center;
+}*/
+
+.home .views-row .field-content img {
+	max-width:100%;
+ 	height: auto;
+}
+
+}
+
+
+
+@media (min-width: 56.250em) {
+
 .home .views-row {
 	display: flex;
 	flex-direction: row;
@@ -83,24 +136,7 @@ I don't know why I bothered having two seperate css pages for both when i could'
 	align-self: center;
 }
 
-/*the next three control the heading colors of the content.*/
 
-.home .views-row:nth-child(1) h2 {
-	color:rgb(255,184,106);
-	margin-top: .5em;
-}
-
-.home .views-row:nth-child(2) h2 {
-	color: rgb(255,147,173);
-		margin-top: .5em;
-
-}
-
-.home .views-row:nth-child(3)  h2 {
-	color:rgb(190,163,204);
-		margin-top: .5em;
-
-}
 
 /*the next three control the layout of the view fields.*/
 
@@ -123,26 +159,270 @@ because one of the views-row is reversed. so just saying margin left for all of 
 .home .views-row:nth-child(1) .views-field-field-dynamic  {
 	margin-left: 3em;
 	padding-left: 8em;
+	padding-right: 1em;
 }
 
 .home .views-row:nth-child(2) .views-field-field-dynamic  {
 	margin-right: 3em;
 	padding-right:8em;
-	/*background-color: lime;*/
+	padding-left: 1em;
+	
 }
 
 .home .views-row:nth-child(3) .views-field-field-dynamic  {
 	margin-left: 3em;
 	padding-left: 8em;
-	/*background-color: pink;*/
+	padding-right: 1em;
+
 }
 
 .home .views-row:nth-child(1) .views-field-field-image img {
 	margin-right: 2em;
+	margin-left: 1em
 }
 .home .views-row:nth-child(2) .views-field-field-image img {
 	margin-left: 2em;
+	margin-right: 1em;
 }
 .home .views-row:nth-child(3) .views-field-field-image img {
 	margin-right: 2em;
+	margin-left: 1em;
+}
+
+}
+
+/*the next three control the heading colors of the content.*/
+
+.home .views-row:nth-child(1) h2 {
+	color:rgb(255,184,106);
+	margin-top: .5em;
+}
+
+.home .views-row:nth-child(2) h2 {
+	color: rgb(255,147,173);
+		margin-top: .5em;
+
+}
+
+.home .views-row:nth-child(3)  h2 {
+	color:rgb(190,163,204);
+		margin-top: .5em;
+
+}
+
+
+
+
+
+/*Ok, so probably should've hade a seperate css page for this. I still might.
+ But everything below this covers the concession menu for the home page.*/
+
+
+
+#block-views-block-duplicate-of-about-block-5 {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+}
+
+#block-views-block-duplicate-of-about-block-5 h2 {
+	color: rgb(255,246,9);
+}
+
+
+
+
+.menu {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+}
+
+.menu .views-row {
+	margin: 2.5%;
+}
+
+table {
+	border-collapse: collapse;
+	border-color: #e2e2e2;
+	border-bottom-color: #e2e2e2;
+}
+
+td, table, tr, th, tbody {
+	border-color: #e2e2e2;
+}
+
+.menu .views-row:nth-child(1) h2 {
+color: rgb(255,184,106) ;
+}
+
+.menu .views-row:nth-child(2) h2 {
+	color: rgb(255,147,173);	
+}
+
+.menu .views-row:nth-child(3) h2 {
+	color:rgb(190,163,204) ;	
+}
+
+
+
+#menu-colors1{
+		background-color: rgb(255,184,106) ;
+}
+
+#menu-colors2{
+		background-color: rgb(255,147,173);
+}
+
+#menu-colors3{
+		background-color:rgb(190,163,204) ;	
+}
+
+#menu-colors4{
+		background-color:rgb(123,216,223) ;
+}
+
+#menu-colors5{
+	background-color: rgb(119,219,147);
+}
+
+.menu .views-row .views-field-field-dynamic .field-content table thead tr th {
+	color: white;
+}
+
+
+/*ok, so below. I'm gonna be attaching a div inside of the events table to make this easier to target. also,
+because its gonna need a header, which i dont think the nth-children will be able to select. 
+so that div will have an id, so that way this can be properly styled.*/
+
+
+.menu .views-row .views-field-field-dynamic .field-content p{
+	padding: 2.5%;
+}
+
+.menu .views-row .views-field-field-dynamic .field-content p:nth-child(2) {
+		font-weight: 400;
+}
+
+.menu td {
+	padding: 0.5em;
+}
+
+@media (max-width: 50em) {
+
+.menu {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+}
+
+
+
+
+.menu td,
+.menu table,
+.menu tr,
+.menu th,
+.menu tbody {
+	display: block;
+	border: none;
+}
+
+
+
+.menu .views-row:nth-child(1) .views-field-field-dynamic .field-content table thead {
+	display: none;
+
+}
+.menu .views-row:nth-child(2) .views-field-field-dynamic .field-content table thead {
+	align-self: center;
+	padding: 2.5%;
+
+}
+.menu .views-row:nth-child(3) .views-field-field-dynamic .field-content table thead {
+	display: none;
+
+}
+
+#menu-colors3 {
+	color: black;
+	background-color: #fff;
+}
+
+.menu .views-row .views-field-field-dynamic .field-content table thead {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+/*.menu thead{
+	display: none;
+}*/
+
+/*.menu thead #menu-colors3 {
+	display: list-item;
+	background-color: black;
+}*/
+
+
+.menu tbody td:nth-child(1) {
+	font-size: 1.2em;
+}
+.menu tbody td:nth-child(2)::before {
+	content: 'Price: ';
+	font-weight: bold;
+}
+.menu tbody td:nth-child(3)::before {
+	content: 'Cost: ';
+	font-weight: bold;
+}
+.menu tbody td:nth-child(4)::before {
+	content: 'Notes: ';
+	font-weight: bold;
+}
+
+.menu tbody td:nth-child(4) {
+	margin-bottom: 2em;
+}
+
+.menu tbody td:not(:nth-child(1)) {
+	margin-left: 2em;
+}
+
+
+.menu tbody tr td:nth-child(1) {
+	margin-left: 1em;
+}
+
+
+/*#menu-colors1{
+		background-color: rgb(255,184,106) ;
+}
+
+#menu-colors2{
+		background-color: rgb(255,147,173);
+}
+
+#menu-colors3{
+		background-color:rgb(190,163,204) ;	
+}
+
+#menu-colors4{
+		background-color:rgb(123,216,223) ;
+}
+
+#menu-colors5{
+	background-color: rgb(119,219,147);
+}*/
+
+.menu .views-row .views-field-field-dynamic .field-content table thead tr th {
+	color: white;
+}
+
 }
