--- a/web/themes/custom/skate/css/component/footer.css
+++ b/web/themes/custom/skate/css/component/footer.css
@@ -16,7 +16,7 @@ footer > * {
 footer {
 	width: 100%;
 	background-color: #7bd8df;
-	margin-top: 2.5%;
+	padding-top: 1em;
 }
 
 footer .region-footer {
@@ -25,7 +25,7 @@ footer .region-footer {
 	flex-wrap: wrap;
 	justify-content: space-around;
 	align-items: center;
-	margin-top: 2.5%;
+	padding-top: 1em;
 }
 
 footer .region nav > ul {
