--- a/web/themes/custom/skate/css/component/mainnav.css
+++ b/web/themes/custom/skate/css/component/mainnav.css
@@ -1,3 +1,6 @@
+
+
+
 #block-skate-mainnavigation > ul li {
 
 	list-style-type: none;
@@ -25,8 +28,10 @@
 }
 
 #block-skate-mainnavigation {
+	
 	width: 100%;
 	text-align: center;
+
 }
 
 /*below shows the colors of the menu links.*/
@@ -62,7 +67,7 @@
 	max-width: 100%;
 	display:flex;
 	flex-direction: row;
-
+	max-width: 75em;
 }
 
 #navdec span {
@@ -93,3 +98,4 @@
 #navdec span:nth-child(6) {
 	background-color: rgb(119,219,147);
 }
+
