--- a/web/themes/custom/skate/css/component/contact.css
+++ b/web/themes/custom/skate/css/component/contact.css
@@ -1,6 +1,8 @@
+.region {
+	max-width: 75em;
+}
 
-
-@media(max-width: 62.475em){
+@media(max-width: 75em){
 
 
 #block-views-block-duplicate-of-about-block-4 div .contactV1{
@@ -57,7 +59,7 @@
   border-radius: .75em;
   font-family: Arial;
   color: #ffffff;
-  font-size: 20px;
+  font-size: 1.25em;
   background: #7BD8DF;
   padding: 0.5em 3em;
   text-decoration: none;
