--- a/web/themes/custom/skate/css/component/parties.css
+++ b/web/themes/custom/skate/css/component/parties.css
@@ -19,7 +19,7 @@
 
 
 .party .views-row .views-field-field-dynamic .field-content{
-	padding: 2.5%;
+	padding: 3em;
 
 	display: flex;
 	flex-direction: column;
@@ -79,21 +79,21 @@ the documentation says they should, but clearly I'm doing something wrong. Hence
 
 .party .views-row:nth-child(1) .views-field-field-dynamic  {
 	margin-left: 3em;
-	padding-left: 9em;
-	padding-right: 1em;
+	padding-left: 7em;
+	padding-right: 3em;
 }
 
 .party .views-row:nth-child(2) .views-field-field-dynamic  {
 	margin-right: 3em;
-	padding-right:9em;
-	padding-left: 1em;
+	padding-right:7em;
+	padding-left: 3em;
 	
 }
 
 .party .views-row:nth-child(3) .views-field-field-dynamic  {
 	margin-left: 3em;
-	padding-left: 9em;
-	padding-right: 1em;
+	padding-left: 7em;
+	padding-right: 3em;
 }
 
 .party .views-row:nth-child(4) .views-field-field-dynamic  {
@@ -102,21 +102,21 @@ the documentation says they should, but clearly I'm doing something wrong. Hence
 
 .party .views-row:nth-child(5) .views-field-field-dynamic  {
 	margin-left: 3em;
-	padding-left: 9em;
-	padding-right: 1em;
+	padding-left: 7em;
+	padding-right: 3em;
 }
 
 .party .views-row:nth-child(6) .views-field-field-dynamic  {
 	margin-right: 3em;
-	padding-right:9em;
-	padding-left: 1em;
+	padding-right:7em;
+	padding-left: 3em;
 	
 }
 
 .party .views-row:nth-child(7) .views-field-field-dynamic  {
 	margin-left: 3em;
-	padding-left: 9em;
-	padding-right: 1em;
+	padding-left: 7em;
+	padding-right: 3em;
 }
 
 .party .views-row:nth-child(8) .views-field-field-dynamic  {
@@ -126,12 +126,12 @@ the documentation says they should, but clearly I'm doing something wrong. Hence
 
 
 .party .views-row:nth-child(odd) .views-field-field-image img {
-	margin-right: 3em;
-	/*margin-left: 1em*/
+	padding-right: 2em;
+	padding-left: 2em;
 }
 .party .views-row:nth-child(even) .views-field-field-image img {
-	margin-left: 3em;
-	/*margin-right: 1em;*/
+	padding-left: 2em;
+	padding-right: 2em;
 }
 
 /*below makes sure the prices and terms for the parties are in thier respective spots. centered.*/
