--- a/web/themes/custom/skate/css/component/contact.css
+++ b/web/themes/custom/skate/css/component/contact.css
@@ -2,7 +2,7 @@
 	max-width: 75em;
 }
 
-@media(max-width: 75em){
+@media(max-width: 58.063em){
 
 
 #block-views-block-duplicate-of-about-block-4 div .contactV1{
@@ -85,13 +85,13 @@
 }
 
 
-@media(min-width: 62.5em){
+@media(min-width: 58.125em){
 
-/*.contactV1 {
+.contactV1 {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-}*/
+}
 
 .contactV1 .views-row{
 	max-width: 20em;
@@ -115,7 +115,7 @@
 }
 
 .contact .views-row .views-field-field-dynamic {
-	padding: 2em;
+	padding: 1em;
 	
 
 }
@@ -126,7 +126,7 @@
 .contact .views-row .views-field-field-image .field-content img {
 	max-width:100%;
  	height: auto;
- 	padding: 2em;
+ 	padding-left: 1em;
 }
 
 #button-maps {
